--- a/configs/example_config.yaml
+++ b/configs/example_config.yaml
@@ -24,11 +24,13 @@ Application:
 # Configuration of the theming
 # Currently only the configuration of colors is implemented
 Theme:
-  PrimaryColor: "62"
-  SecondaryColor: "230"
+  PrimaryColor: "#3636D1"
+  SecondaryColor: "#F8F8F2"
   NormalTitleColor: "#DDDDDD"
   NormalDescColor: "#777777"
   SelectedPrimaryColor: "#AD58B4"
   SelectedSecondaryColor: "#EE6FF8"
   BreakingColor: "#FF0000"
+  ReaderHighlightColor: "#FFB86C"
+  ReaderHeadingColor: "#BD93F9"
 
