--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,7 +6,7 @@ before:
     - go mod tidy
 
 builds:
-  - binary: Nachrichten
+  - binary: nachrichten
     flags:
       - -trimpath
     ldflags: -s -w -X main.Version={{ .Version }} -X main.CommitSHA={{ .Commit }}
@@ -22,11 +22,11 @@ builds:
 
 nfpms:
   - builds:
-      - Nachrichten
+      - nachrichten
     vendor: Moooooritz
     homepage: "https://github.com/zMoooooritz"
     maintainer: "Moritz Biering <moritzbiering.mb@gmail.com>"
-    description: "A TUI application to read German news"
+    description: "A TUI application for reading German news"
     license: MIT
     formats:
       - apk
