--- a/configs/example_config.yaml
+++ b/configs/example_config.yaml
@@ -1,4 +1,8 @@
 
+# Global settings for the application
+Settings:
+  HideHelpOnStartup: true
+
 # Configuration of how to open specific resources
 # Via the args it is possible to provide flags to the application
 # the arg $ will be replaced by the url of the resource
