--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# Created by https://www.toptal.com/developers/gitignore/api/go
-# Edit at https://www.toptal.com/developers/gitignore?templates=go
 
-### Go ###
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -18,10 +12,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Binaries
+nachrichten
 
-# Go workspace file
-go.work
+# Releases
+dist/
 
-# End of https://www.toptal.com/developers/gitignore/api/go
+# direnv
+.envrc
