--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -2,6 +2,7 @@
 # Global settings for the application
 Settings:
   HideHelpOnStartup: true
+  PreloadThumbnails: true
 
 # Configuration of how to open specific resources
 # Via the args it is possible to provide flags to the application
