add details page; improved usablity

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -34,8 +34,12 @@ Keys:
     - q
     - esc
     - ctrl+c
-  ToggleThumbnail:
+  ShowArticle:
+    - a
+  ShowThumbnail:
     - i
+  ShowDetails:
+    - d
   OpenArticle:
     - o
   OpenVideo:
