configurable selector width

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -3,6 +3,7 @@
 Settings:
   HideHelpOnStartup: true
   PreloadThumbnails: true
+  SelectorWidth: 0.3
 
 # Configuration of keybinds used in the application
 Keys:
